--- a/css/pageSection/header.css
+++ b/css/pageSection/header.css
@@ -8,6 +8,28 @@
     font-family: brah;
     src: url('../../fonts/brah.ttf'), url('../../fonts/brah.eot');
 }
+#video-background {
+  display: block;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  /*
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: auto;
+  min-width: 100%;
+  min-height: 100%;
+  transform: translateX(-50%) translateY(-50%);
+  transition: 1s opacity;
+	z-index: 0;*/
+}
 #container-chamada{
   position: relative;
   top: 36%;
