--- a/css/menu.css
+++ b/css/menu.css
@@ -75,7 +75,7 @@ li:hover{
 }
 li a{
   position: relative;
-  color: rgba(255,255,255,0.6);
+  color: rgba(255,255,255,0.7);
   top: 7px;
 }
 li a:link{
@@ -86,6 +86,7 @@ li a:visited{
 }
 li a:hover{
   text-decoration: none;
+  color: rgba(255,255,255,1);
 }
 li a:active{
   text-decoration: none;
@@ -114,7 +115,7 @@ li a:active{
   text-decoration: none;
 }
 #logo a:hover{
-  color: rgba(255,255,255,1.0);
+  color: rgba(255,255,255,1);
   text-decoration: none;
 }
 #logo a:active{
@@ -126,6 +127,7 @@ li a:active{
   width: auto;
   padding-left: 6px;
   padding-right: 6px;
+  opacity: 0.9;
 }
 #github a img{
   position: relative;
@@ -133,6 +135,7 @@ li a:active{
   width: auto;
   padding-left: 6px;
   padding-right: 6px;
+  opacity: 0.9;
 }
 #twitter{
   width: auto;
