--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body, html{
   padding: 0;
   width: 100%;
   height: 100%;
+  background-attachment: fixed;
+  background-size: cover;
 }
 header#headertop{
   position: relative;
