--- a/css/pageSection/sobremim.css
+++ b/css/pageSection/sobremim.css
@@ -33,7 +33,7 @@ header#headerArticleSobreMim h1{
   text-align: center;
   font-family: calibri;
   font-weight: bold;
-  font-size: 2em;
+  font-size: 2.2em;
   color: #3C4858;
 }
 header#headerArticleSobreMim h2{
@@ -42,20 +42,20 @@ header#headerArticleSobreMim h2{
   text-align: center;
   font-family: calibri;
   font-weight: normal;
-  font-size: 1.3em;
+  font-size: 1.5em;
   color: #3C4858;
 }
 section#paragrafo{
   position: relative;
   margin: 0 auto;
-  width: 50%;
+  width: 65%;
 }
 section#sobreMim article p{
   position: relative;
   text-align: center;
   font-family: calibri;
-  font-weight: light;
-  font-size: 1.2em;
+  font-weight: lighter;
+  font-size: 1.5em;
   line-height: 125%;
   color: #3C4858;
   text-align: justify;
@@ -143,6 +143,9 @@ Adaptando texto, autodidata e criativo*/
   }
   section#paragrafo{
     width: 85%;
+  }
+  section#sobreMim article p{
+    font-size: 1.3em;
   }
 }
 @media screen and (max-width: 577px){
