--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,7 @@ body, html{
   padding: 0;
   width: 100%;
   height: 100%;
-  background-attachment: fixed;
-  background-size: cover;
+  background: #fff;
 }
 header#headertop{
   position: relative;
@@ -14,6 +13,12 @@ header#headertop{
   margin: 0 auto;
   width: 100%;
   height: 85%;
+  /*-webkit-transition-property: top;
+  transition-property: top;
+  -webkit-transition-duration: .0.5s;
+  transition-duration: .0.5s;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;*/
   text-align: center;
   background: url(../images/backgroundwl.png) no-repeat fixed center;
   background-size: cover;
