--- a/css/pageSection/sobremim.css
+++ b/css/pageSection/sobremim.css
@@ -1,26 +1,24 @@
 @charset "UTF-8";
 
-@font-face {
-    font-family: calibri;
-    src: url('../../fonts/calibri.ttf'), url('../../fonts/calibri.eot');
-}
 #perfil{
   position: relative;
   margin: 0 auto;
-  width: 155px;
-  height: 155px;
+  width: 160px;
+  height: 160px;
   top: -85px;
   border-radius: 50%;
-  box-shadow: 0px 6px 0px  10px #00a68a;
+  background: #00a68a;
+  box-shadow: 0px 4px 0px  10px #00a68a;
 }
 #perfil img{
   margin: 0 auto;
-  width: 155px;
-  height: 155px;
+  width: 160px;
+  height: 160px;
   top: -85px;
   border-radius: 50%;
-  box-shadow: 0px 2px 0px  8px #00b395;
+  box-shadow: 0px 2px 0px  7px #00b395;
 }
+
 section#sobreMim article{
   position: relative;
   width: 100%;
@@ -29,6 +27,7 @@ section#sobreMim article{
 }
 header#headerArticleSobreMim h1{
   position: relative;
+  margin: 0 auto;
   top: -10px;
   text-align: center;
   font-family: calibri;
@@ -62,42 +61,53 @@ section#sobreMim article p{
 }
 #independente{
   position: relative;
-  top: 0px;
-  margin-top: 130px;
-  width: 100%;
-  height: 300px;
-  background: #f1f2f4;
+  padding-top: 50px;
+  margin: 0 auto;
+  width: 68%;
+  height: 215px;
+  background: #fff;
 }
 #containerIndependente{
   position: relative;
   margin: 0 auto;
-  top: 45px;
-  width: 45%;
+  top: 0px;
+  width: 65%;
   height: auto;
 }
 #autodidata{
   position: relative;
+  width: auto;
+  height: auto;
   float: left;
 }
 #autodidata h1{
   position: relative;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
   text-align: center;
-  font-family: calibri;
+  width: auto;
+  height: auto;
+  font-family: fjalaone;
   font-weight: bold;
   font-size: 1.4em;
-  color: #2C3E50;
+  color: #3C4858;
 }
 #autodidata h2{
   position: relative;
+  margin: 0 auto;
+  top: 10px;
   text-align: center;
-  font-family: calibri;
-  font-weight: bold;
-  font-size: 1.0em;
-  color: #2C3E50;
+  width: auto;
+  height: auto;
+  font-family: fjalaone;
+  font-weight: normal;
+  font-size: 1.1em;
+  color: #3C4858;
 }
 #criativo{
   position: relative;
+  margin: 0 auto;
+  width: auto;
+  height: auto;
   float: right;
 }
 #criativo img{
@@ -105,20 +115,26 @@ section#sobreMim article p{
 }
 #criativo h1{
   position: relative;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
+  width: auto;
+  height: auto;
   text-align: center;
-  font-family: calibri;
+  font-family: fjalaone;
   font-weight: bold;
   font-size: 1.4em;
-  color: #2C3E50;
+  color: #3C4858;
 }
 #criativo h2{
   position: relative;
+  margin: 0 auto;
+  top: 10px;
   text-align: center;
-  font-family: calibri;
-  font-weight: bold;
-  font-size: 1.0em;
-  color: #2C3E50;
+  width: auto;
+  height: auto;
+  font-family: fjalaone;
+  font-weight: normal;
+  font-size: 1.1em;
+  color: #3C4858;
 }
 /*            ALL MEDIAS
 //////////////////////////////////////
@@ -132,31 +148,35 @@ Adaptando texto, autodidata e criativo*/
     width: 65%;
   }
 }
-@media screen and (max-width: 857px){
+@media screen and (max-width: 1192px){
   #containerIndependente{
-    width: 70%;
+    width: 95%;
   }
 }
-@media screen and (max-width: 722px){
+@media screen and (max-width: 770px){
+  #independente{
+    width: 100%;
+  }
   #containerIndependente{
-    width: 85%;
+    width: 80%;
   }
   section#paragrafo{
     width: 85%;
   }
   section#sobreMim article p{
-    font-size: 1.3em;
+    font-size: 1.4em;
   }
 }
-@media screen and (max-width: 577px){
+@media screen and (max-width: 660px){
   #containerIndependente{
     width: 213px;
-    top: 40px;
   }
   #independente{
-    height: 570px;
+    height: 485px;
+    padding-top: 0px;
+    top: 20px;
   }
   #criativo{
-    top: 20px;
+    top: 25px;
   }
 }
